<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/etSetUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="60dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/et_set_username"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/etSetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:padding="10dp"
        android:layout_below="@+id/etSetUsername"
        android:layout_centerHorizontal="true"
        android:hint="@string/et_set_password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:padding="10dp"
        android:layout_below="@+id/etSetPassword"
        android:layout_centerHorizontal="true"
        android:hint="@string/et_confirm_password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        />

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_below="@id/etConfirmPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_sign_up"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_background"/>

</RelativeLayout>