<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tvFoodPreference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/tv_food_heading"
        android:textColor="@color/colorWhite"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/tvCuisineChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/tv_cuisine_choice"
        android:textColor="@color/colorWhite"/>

    <Spinner
        android:id="@+id/spinnerCuisine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/spinner_background"/>

    <TextView
        android:id="@+id/tvRestaurantRatingPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/tv_rating_preference"
        android:textColor="@color/colorWhite"/>

    <Spinner
        android:id="@+id/spinnerRestaurantRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/spinner_background"/>

    <TextView
        android:id="@+id/tvFoodPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:text="@string/tv_swipe"
        android:textSize="15dp"
        android:textColor="@color/colorWhite"/>

</LinearLayout>