<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvInterestsPreference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/tv_interests_heading"
        android:textColor="@color/colorBlack"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/tvPersonType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/tv_person_type"
        android:textColor="@color/colorBlack"/>

    <Spinner
        android:id="@+id/spinnerPersonType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/edit_text_background"/>

    <TextView
        android:id="@+id/tvActivityType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/tv_activity_type"
        android:textColor="@color/colorBlack"/>

    <Spinner
        android:id="@+id/spinnerActivityType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/edit_text_background"/>

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_submit"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_background"/>

</LinearLayout>