<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripGenerator">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/tv_heading"
        android:textColor="@color/colorBlack"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/tvSelectCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/tv_select_city"
        android:textColor="@color/colorBlack"/>

    <Spinner
        android:id="@+id/spinnerCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/edit_text_background"/>

    <TextView
        android:id="@+id/tvSelectBudget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/tv_select_budget"
        android:textColor="@color/colorBlack"/>

    <Spinner
        android:id="@+id/spinnerBudget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/edit_text_background"/>

    <Button
        android:id="@+id/btnGenerateTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:text="@string/btn_generate_trip"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_background"/>

</LinearLayout>