<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OnBoardingFragment2"
    android:background="@color/colorAccent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lotAnimHotel"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="20dp"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_speed="1.75"
        app:lottie_fileName="hotel_anim.json"/>

    <TextView
        android:id="@+id/tvHotel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lotAnimHotel"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_hotel1"
        android:textSize="25dp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/tvHotel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHotel1"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_hotel2"
        android:textSize="17dp"
        android:textColor="@color/colorWhite"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lotAnimTaxi"
        android:layout_width="230dp"
        android:layout_height="150dp"
        android:layout_below="@id/tvHotel2"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_speed="1.25"
        app:lottie_fileName="taxi_anim.json"/>

    <TextView
        android:id="@+id/tvTaxi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lotAnimTaxi"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_taxi1"
        android:textSize="25dp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/tvTaxi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTaxi1"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tv_taxi2"
        android:textSize="17dp"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>